--- a/index.html
+++ b/index.html
@@ -67,17 +67,14 @@
         }
 
         .quantity-btn {
-            width: 30px;
+            width: 40px;
             height: 30px;
             border: none;
-            border-radius: 50%;
+            border-radius: 5px;
             background-color: #2196F3;
             color: white;
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
 
         .quantity-btn:active {
@@ -87,6 +84,8 @@
         .current-quantity {
             font-size: 18px;
             min-width: 30px;
+            text-align: center;
+            display: inline-block;
         }
 
         .roll-controls {
@@ -211,60 +210,75 @@
             <div class="dice-card" data-dice="d4">
                 <div class="dice-image">D4</div>
                 <div class="quantity-controls">
+                    <button class="quantity-btn minus5">-5</button>
                     <button class="quantity-btn minus">-</button>
                     <span class="current-quantity">0</span>
                     <button class="quantity-btn plus">+</button>
+                    <button class="quantity-btn plus5">+5</button>
                 </div>
             </div>
             <div class="dice-card" data-dice="d6">
                 <div class="dice-image">D6</div>
                 <div class="quantity-controls">
+                    <button class="quantity-btn minus5">-5</button>
                     <button class="quantity-btn minus">-</button>
                     <span class="current-quantity">0</span>
                     <button class="quantity-btn plus">+</button>
+                    <button class="quantity-btn plus5">+5</button>
                 </div>
             </div>
             <div class="dice-card" data-dice="d8">
                 <div class="dice-image">D8</div>
                 <div class="quantity-controls">
+                    <button class="quantity-btn minus5">-5</button>
                     <button class="quantity-btn minus">-</button>
                     <span class="current-quantity">0</span>
                     <button class="quantity-btn plus">+</button>
+                    <button class="quantity-btn plus5">+5</button>
                 </div>
             </div>
             <div class="dice-card" data-dice="d10">
                 <div class="dice-image">D10</div>
                 <div class="quantity-controls">
+                    <button class="quantity-btn minus5">-5</button>
                     <button class="quantity-btn minus">-</button>
                     <span class="current-quantity">0</span>
                     <button class="quantity-btn plus">+</button>
+                    <button class="quantity-btn plus5">+5</button>
                 </div>
             </div>
             <div class="dice-card" data-dice="d12">
                 <div class="dice-image">D12</div>
                 <div class="quantity-controls">
+                    <button class="quantity-btn minus5">-5</button>
                     <button class="quantity-btn minus">-</button>
                     <span class="current-quantity">0</span>
                     <button class="quantity-btn plus">+</button>
+                    <button class="quantity-btn plus5">+5</button>
                 </div>
             </div>
             <div class="dice-card" data-dice="d20">
                 <div class="dice-image">D20</div>
                 <div class="quantity-controls">
+                    <button class="quantity-btn minus5">-5</button>
                     <button class="quantity-btn minus">-</button>
                     <span class="current-quantity">0</span>
                     <button class="quantity-btn plus">+</button>
+                    <button class="quantity-btn plus5">+5</button>
                 </div>
             </div>
         </div>
+
         <div class="global-options">
             <label><input type="checkbox" id="global-advantage" /> 优势</label>
             <label><input type="checkbox" id="global-disadvantage" /> 劣势</label>
         </div>
+
         <div class="roll-controls">
             <button id="roll-button">投掷骰子</button>
             <button id="reset-button">重置所有</button>
         </div>
+
         <div class="progress-bar-container">
             <div class="progress-bar"></div>
             <div class="progress-bar-text">随机数计算中</div>
@@ -277,16 +291,28 @@
                 const display = controls.querySelector(".current-quantity");
                 const plusBtn = controls.querySelector(".plus");
                 const minusBtn = controls.querySelector(".minus");
+
                 plusBtn.addEventListener("click", () => {
                     display.textContent = Math.min(99, +display.textContent + 1);
                 });
                 minusBtn.addEventListener("click", () => {
                     display.textContent = Math.max(0, +display.textContent - 1);
                 });
+
+                const plus5Btn = controls.querySelector(".plus5");
+                const minus5Btn = controls.querySelector(".minus5");
+
+                plus5Btn.addEventListener("click", () => {
+                    display.textContent = Math.min(99, +display.textContent + 5);
+                });
+                minus5Btn.addEventListener("click", () => {
+                    display.textContent = Math.max(0, +display.textContent - 5);
+                });
             });
 
             const advantageCheckbox = document.getElementById("global-advantage");
             const disadvantageCheckbox = document.getElementById("global-disadvantage");
+
             advantageCheckbox.addEventListener("change", () => {
                 if (advantageCheckbox.checked) {
                     disadvantageCheckbox.checked = false;
@@ -305,12 +331,15 @@
             function buildRollHtml(rolls) {
                 let resultHtml = "";
                 let grandTotal = 0;
+
                 for (const diceType in rolls) {
                     if (rolls.hasOwnProperty(diceType)) {
                         const quantity = rolls[diceType].quantity;
                         if (quantity === 0) continue;
+
                         resultHtml += `<h3>${diceType.toUpperCase()} ×${quantity}</h3><ul>`;
                         const subtotal = rolls[diceType].subtotal;
+
                         rolls[diceType].rolls.forEach(roll => {
                             if (typeof roll === 'object') {
                                 const prefix = advantageCheckbox.checked ? "优势" : "劣势";
@@ -340,11 +369,14 @@
                 progressBarContainer.scrollIntoView({ behavior: "smooth" });
 
                 let allRolls = {};
+
                 document.querySelectorAll(".dice-card").forEach((card) => {
                     const diceType = card.dataset.dice;
                     const quantity = +card.querySelector(".current-quantity").textContent;
                     const sides = parseInt(diceType.substring(1));
+
                     allRolls[diceType] = { quantity: quantity, rolls: [], subtotal: 0 };
+
                     for (let i = 0; i < quantity; i++) {
                         if (advantageCheckbox.checked || disadvantageCheckbox.checked) {
                             const roll1 = getRandomInt(1, sides);
@@ -362,10 +394,12 @@
 
                 const duration = 1000;
                 const startTime = performance.now();
+
                 function animate() {
                     const now = performance.now();
                     const progress = Math.min((now - startTime) / duration, 1);
                     progressBar.style.width = (progress * 100) + '%';
+
                     if (progress < 1) {
                         requestAnimationFrame(animate);
                     } else {
@@ -374,6 +408,7 @@
                         resultDiv.scrollIntoView({ behavior: "smooth" });
                     }
                 }
+
                 requestAnimationFrame(animate);
             });
 
@@ -386,6 +421,7 @@
                 document.getElementById("result").innerHTML = "";
                 document.querySelector(".progress-bar-container").style.display = "none";
             });
+
         });
     </script>
 </body>
