--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DnD 骰子模拟器</title>
+    <title>DND 骰子模拟器</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <style>
         * {
