--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 <body>
     <div class="container">
-        <h1>DnD 骰子模拟器</h1>
+        <h1>DND 骰子模拟器</h1>
         <div id="dice-container" class="dice-grid">
             <div class="dice-card" data-dice="d4">
                 <div class="dice-image">D4</div>
